Fix: travis file configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,18 @@ services:
     build : 
       context: ./api-users
     image: davaliitos/udagram-api-users
+    ports:
+      - "8080:8080"
   udagram-api-feed:
     build : 
       context: ./api-feed
     image: davaliitos/udagram-api-feed
+    ports:
+      - "8080:8080"
   udagram-frontend:
     build : 
       context: ./frontend
     image: davaliitos/udagram-frontend
+    ports:
+      - "8100:80"
 
