--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12
+FROM beevelop/ionic AS ionic
 # Create app directory
 WORKDIR /usr/src/app
 # Install app dependencies
@@ -8,5 +8,9 @@ COPY package*.json ./
 RUN npm install
 # Bundle app source
 COPY . .
-EXPOSE 8080
-CMD [ "ionic", "build"]
+RUN ionic build
+
+## Run 
+FROM nginx:alpine
+#COPY www /usr/share/nginx/html
+COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
