--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -1,12 +1,27 @@
+worker_processes 1;
+  
+events { worker_connections 1024; }
+error_log /dev/stdout debug;
+
 http {
-        
+
+    sendfile on;
+
+    upstream user {
+        app udagram-api-users:8080;
+    }
+
+    upstream feed {
+        server udagram-api-feed:8080;
+    }
+    
     server {
         listen 8080;
         location /api/v0/feed {
-            proxy_pass         http://udagram-api-feed:8080;
+            proxy_pass http://feed;
         }
         location /api/v0/users {
-            proxy_pass         http://udagram-api-users:8080;
+            proxy_pass http://user;
         }            
     }
 
