fix: Nginx conf file error

--- a/k8s/api-feed/udagram-feed-deployment.yaml
+++ b/k8s/api-feed/udagram-feed-deployment.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: udagram-api-feed
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: udagram-api-feed
@@ -16,8 +15,14 @@ spec:
     spec:
       containers:
       - name: udagram-api-feed
-        image: davaliitos/udagram-api-feed
-        imagePullPolicy: Always  
+        image: davaliitos/udagram-api-feed:latest
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "250m"
+          limits:
+            memory: "1024Mi"
+            cpu: "500m"  
         env:
         - name: POSTGRES_USERNAME
           value: udagramfernando
@@ -27,13 +32,13 @@ spec:
           value: udagramfernandodev
         - name: POSTGRES_HOST
           value: udagramfernando.cezqzwxgzgvo.us-east-1.rds.amazonaws.com
-        - name : AWS_REGION
-          value : us-east-1
-        - name : AWS_PROFILE
+        - name: AWS_REGION
+          value: us-east-1
+        - name: AWS_PROFILE
           value: default
         - name: AWS_MEDIA_BUCKET
           value: udagram-fdavalos-dev
         - name: JWT_SECRET
           value: Davtid81_
-        - name: URL
-          value: http://localhost:8100
+        ports:
+        - containerPort: 80
