--- a/k8s/api-users/udagram-users-service.yaml
+++ b/k8s/api-users/udagram-users-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    service: udagram-api-users
   name: udagram-api-users
+  labels:
+    app: udagram-api-users
 spec:
-  ports:
-  - name: "8080"
-    port: 8080
-    targetPort: 8080
   selector:
-    service: udagram-api-users
+    app: udagram-api-users
+  ports:
+    - name: "8080"
+      port: 8080
+      targetPort: 8080
