--- a/k8s/frontend/frontend-deployment.yaml
+++ b/k8s/frontend/frontend-deployment.yaml
@@ -1,25 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    service: udagram-frontend
   name: udagram-frontend
+  namespace: frontend
+  labels:
+    service: udagram-frontend  
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: udagram-frontend
-      api: external  
+      app: udagram-frontend
   template:
     metadata:
       labels:
-        service: udagram-frontend
-        api: external        
+        app: udagram-frontend       
     spec:
       containers:
       - image: davaliitos/udagram-frontend
-        name: udagram-frontend
-        imagePullPolicy: Always          
+        name: udagram-frontend       
         ports:
-        - containerPort: 80           
-      restartPolicy: Always
+        - containerPort: 80
