--- a/k8s/frontend/frontend-service.yaml
+++ b/k8s/frontend/frontend-service.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    service: udagram-frontend
   name: udagram-frontend
+  namespace: frontend
+  labels:
+    app: udagram-frontend
 spec:
-  ports:
-  - name: "8100"
-    port: 8100
-    targetPort: 80
+  type: NodePort
   selector:
-    service: udagram-frontend
+    app: udagram-frontend
+  ports:
+    - name: "8100"
+      port: 8100
+      nodePort: 30150
