--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -8,7 +8,7 @@ http {
     sendfile on;
 
     upstream user {
-        app udagram-api-users:8080;
+        server udagram-api-users:8080;
     }
 
     upstream feed {
