fix: Fixing frontend dockerfile

--- a/k8s/api-feed/udagram-feed-deployment.yaml
+++ b/k8s/api-feed/udagram-feed-deployment.yaml
@@ -40,5 +40,7 @@ spec:
           value: udagram-fdavalos-dev
         - name: JWT_SECRET
           value: Davtid81_
+        - name: URL
+          value: http://localhost:8100
         ports:
         - containerPort: 80
