--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -7,7 +7,7 @@ http {
 
     sendfile on;
 
-    upstream user {
+    upstream users {
         server udagram-api-users:8080;
     }
 
@@ -21,7 +21,7 @@ http {
             proxy_pass http://feed;
         }
         location /api/v0/users {
-            proxy_pass http://user;
+            proxy_pass http://users;
         }            
     }
 
