--- a/k8s/frontend/frontend-service.yaml
+++ b/k8s/frontend/frontend-service.yaml
@@ -2,14 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: udagram-frontend
-  namespace: frontend
   labels:
     app: udagram-frontend
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: udagram-frontend
   ports:
     - name: "8100"
       port: 8100
-      nodePort: 30150
+      targetPort: 8100
