fix: Fixing frontend dockerfile

--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -7,9 +7,6 @@ http {
 
     sendfile on;
 
-    upstream users {
-        server udagram-api-users:8080;
-    }
 
     upstream feed {
         server udagram-api-feed:8080;
@@ -21,7 +18,7 @@ http {
             proxy_pass http://feed;
         }
         location /api/v0/users {
-            proxy_pass http://users;
+            proxy_pass http://udagram-api-users:8080;
         }            
     }
 
