--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,8 @@
-FROM node:13-alpine as build
-WORKDIR /app
-COPY package*.json /app/
-RUN npm install -g ionic
-RUN npm install
-COPY ./ /app/
+FROM beevelop/ionic:latest AS ionic
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN npm ci
+COPY . .
 RUN ionic build
 FROM nginx:alpine
-RUN rm -rf /usr/share/nginx/html/*
-COPY --from=build /app/www/ /usr/share/nginx/html/
+COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
